Test fix gh-pages overflow scrolling 3

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* overflow-y: scroll; */
-  /* overflow-y: hidden;
-  overflow-x: hidden; */
   height: 100%;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
   overflow: hidden;
 }
 
